--- a/css/base.css
+++ b/css/base.css
@@ -212,7 +212,7 @@ p.lead,
 }
 .block-cat h2,
 h1.large {
-    font-family: 'Kristi', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+    font-family: 'Petit Formal Script', cursive;
 }
 .main-nav li,
 .but {
